# NFC_Unlock

./: .gitignore  CMakeLists.txt  README.md
components/as608/: CMakeLists.txt  as608.c
components/ble_ling/: CMakeLists.txt  ble_ling.c
components/ble_ling/bleunlock/: bleunlock.c
components/ble_ling/bleunlock/include/: bleunlock.h
components/ble_ling/hid/: esp_hidd_prf_api.c  hid_dev.c  hid_device_le_prf.c
components/ble_ling/hid/include/: hid_main.h
components/ble_ling/include/: ble_ling.h
components/fingerprint/: CMakeLists.txt  fingerprint.c
components/fingerprint/driver/: driver_as608.c  driver_as608.h  driver_as608_basic.c  driver_as608_interface.c  driver_as608_interface.h
components/fingerprint/include/: fingerprint.h
components/fingerprint/test/: test.c
components/gxhtc3/: CMakeLists.txt  gxhtc3.c
components/gxhtc3/include/: gxhtc3.h  gxhtc3_cmd.h
components/gxhtc3/test/: test.c
components/qmc5883l/: CMakeLists.txt  qmc5883l.c
components/qmc5883l/include/: qmc5883l.h  qmc5883l_reg.h
components/qmc5883l/test/: test.c
components/qmi8658c/: CMakeLists.txt  README.md  qmi8658c.c
components/qmi8658c/include/: qmi8658c.h  qmi8658c_reg.h
components/qmi8658c/test/: test.c
components/rc522/: CMakeLists.txt
components/rc522/include/: guards.h  iso14445_def.h  port.h  rc522.h  rc522_def.h
components/rc522/src/: port.c  rc522.c
main/: CMakeLists.txt  Kconfig.projbuild  bleAPP.c  bleAPP.h  esp_hidd_prf_api.c  hid_device_le_prf.c  idf_component.yml  main.c  netAPP.c  nfcAPP.c  nfcAPP.h
(+2 files in other folders)
